--- a/frontend/css/board.css
+++ b/frontend/css/board.css
@@ -29,8 +29,8 @@
   font-size: 14px;
   cursor: default;
   user-select: none;
-  color: red;
   font-weight: bold;
+  background-color: #fee3c9;
 }
 
 [row='0'][col='0'],
@@ -65,33 +65,27 @@
 [row='7'][col='3'],
 [row='7'][col='5'],
 [row='7'][col='7'] {
-  background-color: black;
+  background-color: #ff9229;
+
 }
 
 .square.highlight {
   background-color: teal;
 }
 
-/* .square.potential-move {
-  background-color: rgba(255, 160, 122, 0.459);
-} */
-.square.potential-move::after {
-  content: "";
-  position: relative;
-  width: 16px;
-  height: 16px;
+.square::after {
+  content: '';
   border-radius: 50%;
-  border: 5px solid rgb(61, 61, 61);
-  background-color: gray;
+}
+.square.potential-move::after {
+  width: 18px;
+  height: 18px;
+  background-color: rgba(117, 117, 117, 0.5);
 }
 .square.potential-capture::after {
-  content: "";
-  position: relative;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  border: 5px solid rgb(61, 61, 61);
-  background-color: red;
+  width: 58px;
+  height: 58px;
+  border: 5px solid rgba(117, 117, 117, 0.5);
 }
 
 .piece {
