--- a/frontend/css/board.css
+++ b/frontend/css/board.css
@@ -18,6 +18,14 @@
   display: flex;
 }
 
+.row-col-indicator {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 12px;
+  z-index: 999;
+}
+
 .square {
   position: relative;
   width: 68px;
