--- a/frontend/css/board.css
+++ b/frontend/css/board.css
@@ -38,7 +38,7 @@
   cursor: default;
   user-select: none;
   font-weight: bold;
-  background-color: #fee3c9;
+  background-color: #ff9229;
 }
 
 [row='0'][col='0'],
@@ -73,7 +73,7 @@
 [row='7'][col='3'],
 [row='7'][col='5'],
 [row='7'][col='7'] {
-  background-color: #ff9229;
+  background-color: #fee3c9;
 }
 
 .square.highlight {
@@ -98,4 +98,15 @@
 .piece {
   position: absolute;
   width: 56px;
+}
+
+.img-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
