--- a/frontend/src/css/common.css
+++ b/frontend/src/css/common.css
@@ -6,10 +6,21 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(214, 214, 214);
 }
 
 #app {
   padding: 1rem;
+}
+
+main {
+  max-width: 800px;
+  margin: auto;
+}
+
+.center-container {
+  max-width: 544px;
+  margin: auto;
 }
 
 button {
