--- a/frontend/src/css/header-footer.css
+++ b/frontend/src/css/header-footer.css
@@ -1,3 +1,14 @@
 #footer {
   margin-top: 1rem;
 }
+
+#footer .inner {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: flex-end;
+}
+
+#footer #debug {
+  display: flex;
+  gap: 0.5rem;
+}
