--- a/frontend/src/css/modal.css
+++ b/frontend/src/css/modal.css
@@ -14,6 +14,7 @@
   background-color: white;
   padding: 1rem 2rem;
   border-radius: 6px;
+  box-shadow: 1px 1px 8px 3px rgba(0, 0, 0, 0.5);
 }
 
 .modal-close-button-container {
