--- a/frontend/public/css/modal.css
+++ b/frontend/public/css/modal.css
@@ -17,6 +17,10 @@
   box-shadow: 1px 1px 8px 3px rgba(0, 0, 0, 0.5);
 }
 
+#modal-content p {
+  margin: 1rem 0 2rem;
+}
+
 .modal-close-button-container {
   position: absolute;
   top: 0;
