--- a/frontend/public/css/squares.css
+++ b/frontend/public/css/squares.css
@@ -35,8 +35,10 @@
 
 .square {
   position: relative;
-  width: 68px;
-  height: 68px;
+  width: 100%;
+  aspect-ratio: 1/1;
+  /* width: 68px;
+  height: 68px; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -51,17 +53,18 @@
 .square::after {
   content: '';
   border-radius: 50%;
+  position: absolute;
 }
 
 .square.potential-move::after {
-  width: 18px;
-  height: 18px;
+  width: 30%;
+  height: 30%;
   background-color: rgba(117, 117, 117, 0.65);
 }
 
 .square.potential-capture::after {
-  width: 58px;
-  height: 58px;
+  width: 85%;
+  height: 85%;
   border: 5px solid rgba(117, 117, 117, 0.65);
 }
 
@@ -79,7 +82,6 @@
   /* comment for debug: */
   display: none;
 }
-
 
 .rank-indicator,
 .file-indicator {
